@@ -1,3 +1,10 @@
+2020-05-25 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/ralloc2.cc,
+	  src/pdk/gen.c,
+	  support/regression/tests/bug-3007.c:
+	  Fix bug #3007.
+
 2020-05-28 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCcse.c (ifxOptimize): do not replace condition after '-' so
